# man-parse-rust

./: Cargo.toml  README.md
.github/workflows/: Build.yml
src/: .main.rs.swp  demo_highlight.rs  highlight.rs  lib.rs  main.rs  syntax_checker.rs  transducer.rs
